fixed filter-gap

--- a/src/less/memo-filter.less
+++ b/src/less/memo-filter.less
@@ -4,8 +4,8 @@
   .flex(row, space-between, center);
   width: 100%;
   flex-wrap: wrap;
-  padding: 12px 12px;
-  padding-bottom: 4px;
+  padding: 4px 12px;
+  padding-bottom: 12px;
   font-size: 13px;
   line-height: 1.8;
 
@@ -17,7 +17,7 @@
       margin-left: -6px;
       margin-right: 3px;
     }
-  
+
     > .filter-item-container {
       padding: 2px 8px;
       padding-left: 4px;
@@ -29,11 +29,11 @@
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
-  
+
       > .icon-text {
         letter-spacing: 2px;
       }
-  
+
       &:hover {
         text-decoration: line-through;
       }
@@ -53,7 +53,7 @@
 
     &:hover {
       opacity: 0.8;
-      filter:contrast(1) brightness(1) invert(0.5);
+      filter: contrast(1) brightness(1) invert(0.5);
     }
   }
 }
@@ -68,12 +68,12 @@
   .flex(row, space-between, center);
   width: 100%;
   flex-wrap: wrap;
-  padding: 12px 12px;
-  padding-bottom: 4px;
+  padding: 4px 12px;
+  padding-bottom: 12px;
   font-size: 13px;
   line-height: 1.8;
 
-  > .filter-query{
+  > .filter-query {
     .flex(row, flex-start, flex-start);
 
     > .tip-text {
@@ -82,7 +82,7 @@
       margin-right: 3px;
       color: @text-dark-black;
     }
-  
+
     > .filter-item-container {
       padding: 2px 8px;
       padding-left: 4px;
@@ -94,11 +94,11 @@
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
-  
+
       > .icon-text {
         letter-spacing: 2px;
       }
-  
+
       &:hover {
         text-decoration: line-through;
       }
@@ -118,7 +118,7 @@
 
     &:hover {
       opacity: 0.8;
-      filter:contrast(1) brightness(1) invert(0.9);
+      filter: contrast(1) brightness(1) invert(0.9);
     }
   }
 }
